--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,50 +1,9 @@
-#yaml 
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
-version: 2
-jobs:
-  build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:7.10
-# Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-# working_directory: ~/repo
-# steps:
-      - checkout
-# Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-- run: yarn install
-- save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-# run tests!
-      - run: yarn test
-      - run: sudo apt-get update && sudo apt-get install -y python-dev
-      - run: sudo curl -O https://bootstrap.pypa.io/get-pip.py
-      - run: sudo python get-pip.py
-      - run: sudo pip install awscli --upgrade
-      - run: aws --version
-      - run: aws s3 ls
-      - run: yarn run deploy
-dependencies:
-    override:
-        - sudo pip install awscli
+machine:
+  node:
+    version: 6.0.0
 test:
   override:
-    - echo "test"
- 
-deployment:
-  prod:
-    branch: master
-    commands:
-      - aws s3 sync jekyll/_site/docs s3://circle-production-static-site/docs/ --delete
+    - npm test -- --coverage
+  post:
+    - npm install -g codeclimate-test-reporter
+    - codeclimate-test-reporter < coverage/lcov.info
