--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/nodejs:6.11.3
+      - image: circleci/node:6.11.3
     steps:
       - checkout # special step to check out source code to working directory
       - run:
