--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "isarray": "^2.0.4",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
     "react-scripts": "1.1.1"
@@ -12,7 +13,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy":
-      "yarn build && aws s3 sync build/ s3://continiousedeploy-reactapp --delete"
+    "deploy": "yarn build && aws s3 sync build/ s3://continiousedeploy-reactapp --delete"
   }
 }
